--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,3 +1,5 @@
-<footer class="container-fluid col-sm-12 text-center">
-    <p>Marco Manuel Ferández Pranno - Desarrollo de Aplicaciones en Internet - Licencia MIT</p>
+<footer class="container-fluid footer col-sm-12 text-center">
+    <p class="footer-text">
+      Marco Manuel Ferández Pranno - Desarrollo de Aplicaciones en Internet - Licencia MIT
+    </p>
 </footer>
