--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,12 +1,24 @@
-<!doctype html>
-<link rel= "stylesheet" type= "text/css" href= "{{ urls['stylesheet'] }}">
+{% extends "layout.html" %}
 
-<title>This is an awesome template.</title>
+{% block body %}
 
-{% if name %}
-	<h1 class="red-colored">Hello {{ name }}!</h1>
-{% else %}
-	<h1> Hello Stranger! </h1>
-{% endif %}
+<div class="container-fluid">
+    <div class="row content">
+        {% include "partials/left_menu.html" %}
 
-<img src="{{ urls['image'] }}">
+        <div class="col-sm-9">
+					<title>This is an awesome template.</title>
+
+					{% if name %}
+						<h1 class="red-colored">Hello {{ name }}!</h1>
+					{% else %}
+						<h1> Hello Stranger! </h1>
+					{% endif %}
+
+					<img src="{{ urls['image'] }}" >
+        </div>
+      </div>
+  </div>
+
+
+{% endblock %}
