--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,20 +1,74 @@
-{% extends "layout.html" %}
-{% block body %}
+{% extends "layout.html" %} {% block body %}
 <div class="container-fluid">
-    <div class="row content">
-        <div class="col-sm-3 sidenav">
-            <h4>Homepage</h4>
-            <ul class="nav nav-pills nav-stacked">
-                <li class="active"><a href="#section1">Homepage</a></li>
-                <li><a href="/hello">Hello Message</a></li>
-                <li><a href="/mandelbrot">Mandelbrot</a></li>
-                <li><a href="/404">404 sample</a></li>
-            </ul><br>
-        </div>
+    <div class="row content content-wrapper">
+        {% include "partials/left_menu.html" %}
 
-        <div class="col-sm-9">
-            <h4><small>RECENT POSTS</small></h4>
+        <div class="col-sm-9 body-wrapper text-center">
+            <h4><bold>HOMEPAGE</bold></h4>
+
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-4">
+                        <div class="panel panel-primary">
+                            <div class="panel-heading">Example panel</div>
+                            <div class="panel-body"><img src="{{urls['flask_logo']}}" class="img-responsive" style="width:100%" alt="Image"></div>
+                            <div class="panel-footer">Example footer</div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-4">
+                        <div class="panel panel-primary">
+                            <div class="panel-heading">Example panel</div>
+                            <div class="panel-body"><img src="{{urls['flask_logo']}}" class="img-responsive" style="width:100%" alt="Image"></div>
+                            <div class="panel-footer">Example footer</div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="container text-center">
+                <div class="row">
+                    <div class="col-sm-4">
+                        <div class="panel panel-primary">
+                            <div class="panel-heading">Example panel</div>
+                            <div class="panel-body"><img src="{{urls['flask_logo']}}" class="img-responsive" style="width:100%" alt="Image"></div>
+                            <div class="panel-footer">Example footer</div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-4">
+                        <div class="panel panel-primary">
+                            <div class="panel-heading">Example panel</div>
+                            <div class="panel-body"><img src="{{urls['flask_logo']}}" class="img-responsive" style="width:100%" alt="Image"></div>
+                            <div class="panel-footer">Example footer</div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="container text-center">
+                <div class="row">
+                    <div class="col-sm-4">
+                        <div class="panel panel-primary">
+                            <div class="panel-heading">Example panel</div>
+                            <div class="panel-body"><img src="{{urls['flask_logo']}}" class="img-responsive" style="width:100%" alt="Image"></div>
+                            <div class="panel-footer">Example footer</div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-4">
+                        <div class="panel panel-primary">
+                            <div class="panel-heading">Example panel</div>
+                            <div class="panel-body"><img src="{{urls['flask_logo']}}" class="img-responsive" style="width:100%" alt="Image"></div>
+                            <div class="panel-footer">Example footer</div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
         </div>
     </div>
-</div>
-{% endblock %}
+
+    {% endblock %}
