--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,12 +5,15 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel= "stylesheet" type= "text/css" href= "{{ urls['stylesheet'] }}">
     {% endblock %}
 </head>
 
 <html lang="en">
 <header>
-    {% block header %} {% endblock %}
+    {% block header %}
+      {% include "partials/header.html" %}
+    {% endblock %}
 </header>
 
 <body>
