--- a/templates/404.html
+++ b/templates/404.html
@@ -1,4 +1,13 @@
 <title>Page not found </title>
+{% extends "layout.html" %} {% block body %}
+<div class="container-fluid">
+    <div class="row content content-wrapper">
+        {% include "partials/left_menu.html" %}
 
-<h1>Page Not Found</h1>
-<p>What you were looking for is just not there.</p>
+        <div class="col-sm-9 body-wrapper text-center">
+            <h4><bold>Page Not Found</bold></h4>
+            <p>What you were looking for is just not there.</p>
+          </div>
+      </div>
+  </div>
+  {% endblock %}
