--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -11,13 +11,13 @@
         </div>
     </div>
     <div class="col-sm-4">
-        <form class="login-form">
+        <form class="login-form" action="/login" method="POST">
             <div class="form-group">
                 <div class="col-sm-4 username-input">
-                    <input type="text" class="form-control input-sm" id="username" placeholder="Username">
+                    <input type="text" class="form-control input-sm" name="username" id="username" placeholder="Username">
                 </div>
                 <div class="col-sm-4 password-input">
-                    <input type="password" class="form-control input-sm" id="password" placeholder="Password">
+                    <input type="password" class="form-control input-sm" name="password" id="password" placeholder="Password">
                 </div>
                 <div class="col-sm-4 login-btn">
                     <button type="submit" class="btn btn-default btn-sm">Log in</button>
