--- a/templates/partials/left_menu.html
+++ b/templates/partials/left_menu.html
@@ -2,6 +2,7 @@
     <h4 class="text-center">Menu</h4>
     <ul class="nav nav-pills nav-stacked text-center">
         <li><a href="/">Homepage</a></li>
+        <li><a href="/signup">Sign up</a></li>
         <li><a href="/hello">Hello Message</a></li>
         <li><a href="/mandelbrot">Mandelbrot</a></li>
         <li><a href="/404">404 sample</a></li>
