--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -11,6 +11,7 @@
         </div>
     </div>
     <div class="col-sm-4">
+      {% if not current_user.is_authenticated %}
         <form class="login-form" action="/login" method="POST">
             <div class="form-group">
                 <div class="col-sm-4 username-input">
@@ -24,5 +25,9 @@
                 </div>
             </div>
         </form>
+      {% else %}
+        <h4 class="welcome-message">Welcome, {{current_user.id}}! </h4>
+        <a type="submit" class="btn btn-default btn-sm" href="/logout">Log out</a>
+      {% endif %}
     </div>
 </div>
