--- a/templates/signup.html
+++ b/templates/signup.html
@@ -2,23 +2,24 @@
 <div class="container-fluid">
     <div class="row content content-wrapper">
         {% include "partials/left_menu.html" %}
-
         <div class="col-sm-9 body-wrapper">
-            <h4 class="text-center"><bold>Sign up form</bold></h4>
-
-            <form class="signup-form" action="/signup" method="POST">
-              <div class="form-group">
-                <label for="username">Username:</label>
-                <input type="text" class="form-control" name="username" id="username">
-              </div>
-              <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" class="form-control" name="password" id="password">
-              </div>
-              <button type="submit" class="btn btn-default btn-info">Submit</button>
-            </form>
-
-          </div>
+          {% if current_user.is_authenticated %}
+            <h3><bold>You're already registered!</bold></h3>
+          {% else %}
+              <h4><bold>Sign up form</bold></h4>
+              <form class="signup-form" action="/signup" method="POST">
+                <div class="form-group">
+                  <label for="username">Username:</label>
+                  <input type="text" class="form-control" name="username" id="username">
+                </div>
+                <div class="form-group">
+                  <label for="password">Password:</label>
+                  <input type="password" class="form-control" name="password" id="password">
+                </div>
+                <button type="submit" class="btn btn-default btn-info">Submit</button>
+              </form>
+          {% endif %}
+        </div>
       </div>
   </div>
   {% endblock %}
