Fixed variables in templates.

--- a/templates/hello.html
+++ b/templates/hello.html
@@ -15,7 +15,7 @@
 						<h1> Hello Stranger! </h1>
 					{% endif %}
 
-					<img src="{{ urls['image'] }}" >
+					<img src="/static/assets/images/image.jpg">
         </div>
       </div>
   </div>
