--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -11,7 +11,7 @@
                     <div class="col-sm-4">
                         <div class="panel panel-primary">
                             <div class="panel-heading">Example panel</div>
-                            <div class="panel-body"><img src="{{urls['flask_logo']}}" class="img-responsive" style="width:100%" alt="Image"></div>
+                            <div class="panel-body"><img src="/static/assets/images/flask-logo.png" class="img-responsive" style="width:100%" alt="Image"></div>
                             <div class="panel-footer">Example footer</div>
                         </div>
                     </div>
@@ -19,28 +19,7 @@
                     <div class="col-sm-4">
                         <div class="panel panel-primary">
                             <div class="panel-heading">Example panel</div>
-                            <div class="panel-body"><img src="{{urls['flask_logo']}}" class="img-responsive" style="width:100%" alt="Image"></div>
-                            <div class="panel-footer">Example footer</div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-
-            <div class="container text-center">
-                <div class="row">
-                    <div class="col-sm-4">
-                        <div class="panel panel-primary">
-                            <div class="panel-heading">Example panel</div>
-                            <div class="panel-body"><img src="{{urls['flask_logo']}}" class="img-responsive" style="width:100%" alt="Image"></div>
-                            <div class="panel-footer">Example footer</div>
-                        </div>
-                    </div>
-
-                    <div class="col-sm-4">
-                        <div class="panel panel-primary">
-                            <div class="panel-heading">Example panel</div>
-                            <div class="panel-body"><img src="{{urls['flask_logo']}}" class="img-responsive" style="width:100%" alt="Image"></div>
+                            <div class="panel-body"><img src="/static/assets/images/flask-logo.png" class="img-responsive" style="width:100%" alt="Image"></div>
                             <div class="panel-footer">Example footer</div>
                         </div>
                     </div>
@@ -53,7 +32,7 @@
                     <div class="col-sm-4">
                         <div class="panel panel-primary">
                             <div class="panel-heading">Example panel</div>
-                            <div class="panel-body"><img src="{{urls['flask_logo']}}" class="img-responsive" style="width:100%" alt="Image"></div>
+                            <div class="panel-body"><img src="/static/assets/images/flask-logo.png" class="img-responsive" style="width:100%" alt="Image"></div>
                             <div class="panel-footer">Example footer</div>
                         </div>
                     </div>
@@ -61,7 +40,28 @@
                     <div class="col-sm-4">
                         <div class="panel panel-primary">
                             <div class="panel-heading">Example panel</div>
-                            <div class="panel-body"><img src="{{urls['flask_logo']}}" class="img-responsive" style="width:100%" alt="Image"></div>
+                            <div class="panel-body"><img src="/static/assets/images/flask-logo.png" class="img-responsive" style="width:100%" alt="Image"></div>
+                            <div class="panel-footer">Example footer</div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="container text-center">
+                <div class="row">
+                    <div class="col-sm-4">
+                        <div class="panel panel-primary">
+                            <div class="panel-heading">Example panel</div>
+                            <div class="panel-body"><img src="/static/assets/images/flask-logo.png" class="img-responsive" style="width:100%" alt="Image"></div>
+                            <div class="panel-footer">Example footer</div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-4">
+                        <div class="panel panel-primary">
+                            <div class="panel-heading">Example panel</div>
+                            <div class="panel-body"><img src="/static/assets/images/flask-logo.png" class="img-responsive" style="width:100%" alt="Image"></div>
                             <div class="panel-footer">Example footer</div>
                         </div>
                     </div>
