--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -3,7 +3,7 @@
 </div>
     <div class="col-sm-5">
         <div  style="display: inline-block; ">
-            <img src="{{ urls['logo'] }}" class="logo-img" width="75">
+            <img src="/static/assets/images/web-logo.png" class="logo-img" width="75">
         </div>
         <div class="header-title">
             <h1>DAI Website</h1>
