--- a/templates/partials/left_menu.html
+++ b/templates/partials/left_menu.html
@@ -1,10 +1,19 @@
 <div class="col-sm-3 sidenav left-menu-wrapper">
-    <h4 class="text-center">Menu</h4>
+  <h4 class="text-center">User Menu</h4>
+  <ul class="nav nav-pills nav-stacked text-center">
+      {% if not current_user.is_authenticated %}
+      <li><a href="/signup">Sign up</a></li>
+      {% else %}
+      <li><a href="/view_profile">View profile</a></li>
+      <li><a href="/edit_profile">Edit profile</a></li>
+      {% endif %}
+  </ul><br>
+
+    <h4 class="text-center">Pages</h4>
     <ul class="nav nav-pills nav-stacked text-center">
         <li><a href="/">Homepage</a></li>
-        <li><a href="/signup">Sign up</a></li>
         <li><a href="/hello">Hello Message</a></li>
-        <li><a href="/mandelbrot">Mandelbrot</a></li>
         <li><a href="/404">404 sample</a></li>
+        <li><a href="/mandelbrot">Mandelbrot</a></li>
     </ul><br>
 </div>
