Adding react components, mongodb, etc.

--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -7,7 +7,7 @@
         </div>
         <div class="header-title">
             <h1>DAI Website</h1>
-            <p>Entrega de prácticas 2 y 3</p>
+            <p>Entrega de prácticas 4, 5 y 6</p>
         </div>
     </div>
     <div class="col-sm-4">
