--- a/templates/partials/left_menu.html
+++ b/templates/partials/left_menu.html
@@ -12,8 +12,10 @@
     <h4 class="text-center">Pages</h4>
     <ul class="nav nav-pills nav-stacked text-center">
         <li><a href="/">Homepage</a></li>
+        <li><a href="/restaurants">Restaurants</a></li>
+        <li><a href="/create_restaurants">Create Restaurants</a></li>
+        <li><a href="/maps">Google Maps</a></li>
         <li><a href="/hello">Hello Message</a></li>
         <li><a href="/404">404 sample</a></li>
-        <li><a href="/mandelbrot">Mandelbrot</a></li>
     </ul><br>
 </div>
